src/App.css
:root {
  /* Color Scheme */
  --background-color: #2d2f34; /* Modern dark gray background */
  --primary-color: #667eea; /* Modern purple for primary elements */
  --secondary-color: #778beb; /* Lighter purple for secondary elements */
  --text-color: #e6e6e6; /* Light text for readability */
  --input-color: #3c3e44; /* Slightly lighter input background for contrast */
  --input-text-color: #dcdcdc; /* Input text color for visibility */
  --message-background: #4a4e69; /* Dark message bubble background */
}

body, html {
  height: 100%;
  margin: 0;
  font-family: 'Poppins', sans-serif;
  background: var(--background-color);
  color: var(--text-color);
  overflow: hidden; /* Hide scrollbars if the content fits in the viewport */
}

#root {
  display: flex;
  flex-direction: column;
  height: 100vh;
  width: 100vw; /* Set width to 100% of the viewport width */
}

.app-header {
  display: flex;
  justify-content: left;
  align-items: center;
  background-color: var(--primary-color);
  color: var(--background-color);
  height: 4rem;
  font-size: 0.8rem;
  padding: 0.3rem 1rem;
  padding-left: 2rem;
  width: 100%; /* Full width header */
}

.app-header h1 {
  color: white;
  padding-left: 1rem;
}
.app-logo {
  max-height: 3.5rem; /* Adjust logo size */
  margin-right: 0.8rem;
}

.app-header-text {
  font-size: 2rem;
  font-weight: bold;
}

.app-body {
  flex-grow: 1;
  overflow-y: auto; /* Enable scroll if content is larger than screen */
  padding: 1rem;
  padding-bottom: 5rem;
  padding-top: 0;
  flex-direction: column;
  display: flex;
}

.message {
  max-width: 75%;
  padding: 0.5rem 1rem;
  margin: 0.5rem 0;
  margin-top: 1rem;
  border-radius: 20px;
  color: var(--text-color);
  background-color: var(--message-background);
  word-break: break-word; /* Ensure long words do not overflow */
  font-size: 1rem;
}

.incoming {
  align-self: flex-start;
}

.outgoing {
  align-self: flex-end;
}

.input-container {
  position: fixed; /* Fix the entire input container at the bottom */
  bottom: 0; /* Align it to the bottom */
  left: 0; /* Align it to the left */
  width: 100%; /* Full viewport width */
  padding: 1rem; /* Maintain padding */
  height: 5rem;
  background-color: var(--input-color);
  box-sizing: border-box; /* Padding included in width */
  display: flex; /* Use flexbox for alignment */
  align-items: center; /* Align items vertically */
  justify-content: space-between; /* Spacing between items */
}

.input-container textarea {
  flex: 1; /* Let the textarea grow to fill space */
  margin-right: 1rem; /* Maintain right margin for spacing to the button */
  padding: 0.5rem 1rem; /* Padding inside the textarea */
  font-size: 1rem; /* Font size of the text */
  border: none;
  max-height: 4.5rem;
  font-family: 'Poppins', sans-serif;
  border-radius: 20px; /* Rounded corners */
  background-color: var(--background-color);
  color: var(--input-text-color);
  resize: none; /* Disable resizing */
  
}


.input-container button {
  padding: 0.5rem 1rem; /* Padding inside the button */
  background-color: var(--secondary-color);
  border: none;
  border-radius: 20px; /* Rounded corners */
  color: var(--background-color);
  font-family: 'Poppins', sans-serif;
  cursor: pointer; /* Cursor pointer for button hover */
  white-space: nowrap; /* Prevent wrapping of button text */
}

.input-container button:hover {
  opacity: 0.9; /* Slight opacity change on hover for feedback */
}

/* Ensure the layout is responsive */
@media (max-width: 768px) {
  .message {
    max-width: 85%; /* More width for smaller screens */
  }
}

@media (max-width: 480px) {
  .app-header-text {
    font-size: 1.5rem; /* Smaller font size for very small screens */
  }

  .input-container input, .input-container button {
    padding: 0.4rem; /* Smaller padding for very small screens */
  }
  .input-container textarea {
    padding: 0.4rem;
    padding-left: 12px; /* Consistent padding on the left */
  }

  .input-container button {
    font-size: 1rem; /* Smaller font size for the button text */
  }
  
}


.typing-indicator {
  display: flex;
  align-items: center;
}

.typing-indicator span {
  height: 5px;
  width: 5px;
  margin-right: 3px;
  background-color: #667eea; /* Primary color */
  border-radius: 50%;
  display: inline-block;
  animation: typing 1.4s infinite ease-in-out;
}

.typing-indicator span:nth-child(2) {
  animation-delay: 0.2s;
}

.typing-indicator span:nth-child(3) {
  animation-delay: 0.4s;
}

@keyframes typing {
  0% { transform: translateY(0); }
  28% { transform: translateY(-6px); }
  44% { transform: translateY(0); }
}


.input-container input::placeholder {
  color: #a8a8a8; /* Lighter shade for placeholder text */
  font-style: italic; /* If you want it to be italic */
  font-size: 0.9em; /* Adjust the font size as needed */
}




@media (max-width: 480px){
  #root{
    height: -webkit-fill-available;
  }
}

